src/Components/Note/Note.module.css
.noteContainer {
  border-radius: 12px;
  padding: 16px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
  width: 310px;
  height: 250px;
  font-family: Arial, sans-serif;
  position: relative;
  background-color: white;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.noteContainer:hover {
  transform: translateY(-2px);
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

.noteHeader {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  padding-bottom: 8px;
  margin-bottom: 8px;
}

.noteHeader h1 {
  font-weight: bold;
  font-size: 1.4rem;
  color: #36412c;
  margin: 0;
}

.noteCheckbox {
  width: 20px;
  height: 20px;
  accent-color: black;
  cursor: pointer;
}

.noteDescription {
  font-size: 1rem;
  line-height: 1.5rem;
  color: #333;
  margin-bottom: 8px;
  word-break: break-word;
  overflow: hidden;
  height: 55%;
}

.noteCategory {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: bold;
  font: poppins, sans-serif;
  font-size: 1.1rem;
  margin-top: auto;
  color: black;
  align-self: flex-start;
  padding-bottom: 4px;
  padding-left: 2px;
}

.buttonContainer {
  display: flex;
  justify-content: flex-end;
  gap: 5px;
}

.button {
  background-color: white;
  padding: 1px;
  height: 30px;
  width: 30px;
  cursor: pointer;
  border: none;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: 1px solid gray;
}

.button:hover {
  background-color: rgb(217, 217, 127);
}

